--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ background-color: white;
 
 div.wrapper{
     margin-top: 40px;
+    margin-bottom: 10px;
     display: flex;
     justify-content: space-evenly;
 }
@@ -139,7 +140,7 @@ div.wrapper-txt>p{
 }
 
 .wrapper2{
-    margin-top: 50px;
+    margin-top: 100px;
     display: flex;
     justify-content: space-evenly;
 }
